Added a line to push to GitHub

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p>This is where the image would go.<p>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
+<p>This is a new line added to local repo to push to GitHub.<p>
 
 </body>
 </html> 
